error messages implemented when JS is disabled or Sveriges Radio not working

--- a/Laboration3/content/style.css
+++ b/Laboration3/content/style.css
@@ -11,3 +11,16 @@
 .margin-top{
     margin-top: 20px;
 }
+
+.custom-error{
+    margin: 0 auto;
+    width: 700px;
+    padding: 20px;
+    color: #fff;
+    font-size: 15px;
+}
+
+.custom-error a:link, .custom-error a:visited{
+    color: #fff;
+    text-decoration: underline;
+}
