--- a/Projekt/src/content/style.css
+++ b/Projekt/src/content/style.css
@@ -33,3 +33,12 @@
     width: 80%;
     margin: 0 auto;
 }
+
+.imageHolder {
+    border: 3px solid #eee;
+    box-shadow: 10px 10px 5px #888888;
+    border-radius: 10px;
+    width: 500px;
+    position: absolute;
+    background-color: #fff;
+}
