--- a/Projekt/src/content/style.css
+++ b/Projekt/src/content/style.css
@@ -22,6 +22,18 @@
     margin-top: 20px;
 }
 
+.padding-bottom{
+    padding-bottom: 10px;
+}
+
+.margin-top-left{
+    margin-top: 44px;
+}
+
+.margin-top-right{
+    margin-top: 30px;
+}
+
 .tagDetails{
     position: relative;
     height: 400px;
