--- a/Projekt/src/content/style.css
+++ b/Projekt/src/content/style.css
@@ -3,8 +3,14 @@
     position: relative;
     display: block;
     min-height: 500px;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
+body{
+    background-color: #D0CCC5;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+}
 
 #chart_div_overall, #chart_div_month{
     width: 600px;
@@ -13,6 +19,19 @@
 
 .chart_div_overall{
     text-align: center;
+}
+
+.custom-error{
+    margin: 0 auto;
+    width: 700px;
+    padding: 20px;
+    color: #fff;
+    font-size: 15px;
+}
+
+.custom-error a:link, .custom-error a:visited{
+    color: #fff;
+    text-decoration: underline;
 }
 
 .overall{
@@ -60,4 +79,36 @@
     padding-bottom: 10px;
     color: #333;
     border-bottom: 1px solid #eee;
+}
+
+.index-info{
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #A09C95;
+    height: 300px;
+    width: 60%;
+    box-shadow: 10px 10px 5px #888888;
+    border-radius: 10px;
+}
+
+.index-info p{
+    padding-top: 50px;
+}
+
+
+.index-info img{
+    opacity: 0.5;
+    padding-right: 10px;
+}
+
+#darkBackground{
+    height: 100%;
+    width: 100%;
+    background-color: #333333;
+    padding:0;
+    margin:0;
+    opacity: 0.7;
+    top: 0;
+    left: 0;
+    position: fixed;
 }
