--- a/Laboration3/content/style.css
+++ b/Laboration3/content/style.css
@@ -26,7 +26,7 @@
 }
 
 .active{
-    padding: 10px;
+    padding: 10px 5px 10px 5px;
     background-color: #333;
     border: 1px solid #333;
     border-radius: 10px;
@@ -39,7 +39,7 @@ a.active:link, a.active:visited{
 }
 
 .valueLink{
-    padding: 10px;
+    padding: 10px 5px 10px 5px;
     background-color: #eee;
     border: 1px solid #333;
     border-radius: 10px;
@@ -51,6 +51,7 @@ a.valueLink:link, a.valueLink:visited{
 
 .valueContainer{
     padding-bottom: 20px;
+    font-size: 13px;
 }
 
 .spanClass{
